# Career_Website

./: README.md  app.py  pyproject.toml
static/: style.css
templates/: footer.html  index.html  job_item.html  nav.html
